Update and rename Acerca.html to acerca.html

--- a/acerca.html
+++ b/acerca.html
@@ -20,9 +20,9 @@
             <section id="chuchi">
                 <ul>
                     <li><a href="index.html">Inicio</a></li>
-                    <li><a href="Acerca.html">Acerca de Nosotros</a></li>
-                    <li><a href="Programas.html">Nuestros Programas</a></li>
-                    <li><a href="Ayudar.html">Cómo Ayudar</a></li>
+                    <li><a href="acerca.html">Acerca de Nosotros</a></li>
+                    <li><a href="programas.html">Nuestros Programas</a></li>
+                    <li><a href="ayudar.html">Cómo Ayudar</a></li>
                     <li><a href="galeria.html">Galería de Fotos</a></li>
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="eventos.html">Eventos</a></li>
