--- a/galeria.html
+++ b/galeria.html
@@ -47,7 +47,7 @@
             <div id="rejilla">
                 <!-- Crear una imagen con un título y una descripción -->
                 <div class="imagen">
-                    <img src="img/perro11.jpg" alt="Perro 1">
+                    <img src="img/Megumi.jpg" alt="Perro 1">
                     <h3>Perro 1</h3>
                     <p>Este es uno de los primeros perros que rescatamos. Estaba muy asustado y sucio, pero con
                         paciencia y amor logramos que confiara en nosotros. Ahora está feliz y tiene una familia que lo
@@ -63,7 +63,7 @@
                 </div>
                 <!-- Crear otra imagen con un título y una descripción -->
                 <div class="imagen">
-                    <img src="img/perro31.jpg" alt="Perro 3">
+                    <img src="img/Power2.jpg" alt="Perro 3">
                     <h3>Perro 3</h3>
                     <p>Este es uno de los perros que cuidamos en nuestro albergue. Tiene una herida en la pata que le
                         impide caminar bien, pero no pierde la esperanza de encontrar una familia que lo acepte y lo
@@ -71,7 +71,7 @@
                 </div>
 
                 <div class="imagen">
-                    <img src="img/perro41.jpg" alt="Perro 1">
+                    <img src="img/poppy.jpg" alt="Perro 1">
                     <h3>Perro 1</h3>
                     <p>Este es uno de los primeros perros que rescatamos. Estaba muy asustado y sucio, pero con
                         paciencia y amor logramos que confiara en nosotros. Ahora está feliz y tiene una familia que lo
@@ -79,7 +79,7 @@
                 </div>
 
                 <div class="imagen">
-                    <img src="img/perro51.jpg" alt="Perro 1">
+                    <img src="img/Max.jpg" alt="Perro 1">
                     <h3>Perro 1</h3>
                     <p>Este es uno de los primeros perros que rescatamos. Estaba muy asustado y sucio, pero con
                         paciencia y amor logramos que confiara en nosotros. Ahora está feliz y tiene una familia que lo
@@ -87,7 +87,7 @@
                 </div>
 
                 <div class="imagen">
-                    <img src="img/perro61.jpg" alt="Perro 1">
+                    <img src="img/checo2.jpg" alt="Perro 1">
                     <h3>Perro 1</h3>
                     <p>Este es uno de los primeros perros que rescatamos. Estaba muy asustado y sucio, pero con
                         paciencia y amor logramos que confiara en nosotros. Ahora está feliz y tiene una familia que lo
