--- a/donaciones.html
+++ b/donaciones.html
@@ -85,11 +85,11 @@
                     Siguenos
                 </h2>
                 <ul>
-                    <li> <a href="https://www.instagram.com/?hl=es"><img src="Img/Instagram-logo.png" width="50" alt="">
+                    <li> <a href="https://www.instagram.com/?hl=es"><img src="img/Instagram-logo.png" width="50" alt="">
                         </a></li>
                     <li> <a href="https://www.facebook.com/"><img src="img//8efb55e9efc12eb11bedf41caa7f33bb.png"
                                 width="50" alt=""></a></li>
-                    <li> <a href="https://www.youtube.com/"> <img src="Img/YouTube_full-color_icon_(2017).svg.png"
+                    <li> <a href="https://www.youtube.com/"> <img src="img/YouTube_full-color_icon_(2017).svg.png"
                                 width="50" alt=""> </a></li>
                 </ul>
             </div>
