--- a/galeria.html
+++ b/galeria.html
@@ -4,22 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Nuestra Galería de Fotos</title>
-    <!-- Enlazar el archivo CSS externo -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="CSS.css">
     <script src='javas.js'></script>
 </head>
 
 <body>
-    <!-- Crear un contenedor principal para el sitio web -->
     <header id="encabezado">
         <section id="logo">
             <img class="logo" src="img/logo_fundacion.png" width="155" alt="Logo">
         </section>
-        <button class="abrir-menu" id="abrir"><i class="bi bi-list"></i></button>
-        <nav class="nav" id="navegacion">
-            <button class="cerrar-menu" id="cerrar"><i class="bi bi-x"></i></button>
+        <nav id="navegacion">
             <section id="chuchi">
+
                 <ul>
                     <li><a href="index.html">Inicio</a></li>
                     <li><a href="acerca.html">Acerca de Nosotros</a></li>
@@ -35,70 +31,64 @@
             </section>
         </nav>
     </header>
-    <!-- Crear un contenido principal para el sitio web -->
     <main id="contenido">
-        <!-- Crear una sección para la página de nuestra galería de fotos -->
         <section id="galeria">
             <h2>Nuestra Galería de Fotos</h2>
             <p>En esta página podrás ver algunas imágenes que muestran el trabajo que realizamos con los perros que
                 rescatamos, cuidamos y adoptamos. Esperamos que te gusten y que te inspiren a unirte a nuestra causa.
             </p>
-            <!-- Crear una rejilla de imágenes -->
             <div id="rejilla">
-                <!-- Crear una imagen con un título y una descripción -->
                 <div class="imagen">
-                    <img src="img/Megumi.jpg" alt="Perro 1">
-                    <h3>Perro 1</h3>
+                    <img src="img/Power2.jpg" alt="Power el primer perro">
+                    <h3>Power</h3>
                     <p>Este es uno de los primeros perros que rescatamos. Estaba muy asustado y sucio, pero con
                         paciencia y amor logramos que confiara en nosotros. Ahora está feliz y tiene una familia que lo
                         quiere.</p>
                 </div>
-                <!-- Crear otra imagen con un título y una descripción -->
                 <div class="imagen">
-                    <img src="img/perro21.jpg" alt="Perro 2">
-                    <h3>Perro 2</h3>
+                    <img src="img/perro21.jpg" alt="Scrappy el mestizo">
+                    <h3>Scrappy</h3>
                     <p>Este es uno de los perros que adoptamos. Era muy juguetón y cariñoso, pero nadie lo quería por
                         ser mestizo. Nosotros lo acogimos y le dimos un hogar. Ahora es el mejor amigo de nuestro hijo.
                     </p>
                 </div>
-                <!-- Crear otra imagen con un título y una descripción -->
                 <div class="imagen">
-                    <img src="img/Power2.jpg" alt="Perro 3">
-                    <h3>Perro 3</h3>
+                    <img src="img/Megumi.jpg" alt="Megumi el cojo">
+                    <h3>Megumi</h3>
                     <p>Este es uno de los perros que cuidamos en nuestro albergue. Tiene una herida en la pata que le
                         impide caminar bien, pero no pierde la esperanza de encontrar una familia que lo acepte y lo
                         ayude. Es muy dulce y agradecido.</p>
                 </div>
 
                 <div class="imagen">
-                    <img src="img/poppy.jpg" alt="Perro 1">
-                    <h3>Perro 1</h3>
-                    <p>Este es uno de los primeros perros que rescatamos. Estaba muy asustado y sucio, pero con
-                        paciencia y amor logramos que confiara en nosotros. Ahora está feliz y tiene una familia que lo
-                        quiere.</p>
+                    <img src="img/Max.jpg" alt="Max">
+                    <h3>Max</h3>
+                    <p>Durante una fuerte tormenta, nuestro equipo de rescate escuchó ladridos angustiantes cerca del refugio.
+                         Al salir, nos encontramos con un perro empapado y temblando bajo la lluvia. Rápidamente, nos coordinamos para envolverlo en
+                          una manta y trasladarlo al refugio. Resultó ser un perrito callejero perdido durante la tormenta. Con el esfuerzo conjunto, 
+                          recibió atención veterinaria y ahora forma parte de nuestra familia en el refugio.</p>
                 </div>
 
                 <div class="imagen">
-                    <img src="img/Max.jpg" alt="Perro 1">
-                    <h3>Perro 1</h3>
-                    <p>Este es uno de los primeros perros que rescatamos. Estaba muy asustado y sucio, pero con
-                        paciencia y amor logramos que confiara en nosotros. Ahora está feliz y tiene una familia que lo
-                        quiere.</p>
+                    <img src="img/checo2.jpg" alt="Checo el perro">
+                    <h3>Checo</h3>
+                    <p>Durante una jornada de voluntariado, nuestro grupo de rescate se encontró con un perro asustado junto al arcén de una carretera rural.
+                         Trabajando juntos, logramos calmarlo y ganar su confianza con un poco de comida y cariño. Tras buscar a su dueño sin éxito, decidimos 
+                         llevarlo al refugio local. Resultó ser un perro perdido desde hacía días. Gracias a nuestra colaboración, encontró un nuevo hogar lleno de amor.</p>
                 </div>
 
                 <div class="imagen">
-                    <img src="img/checo2.jpg" alt="Perro 1">
-                    <h3>Perro 1</h3>
-                    <p>Este es uno de los primeros perros que rescatamos. Estaba muy asustado y sucio, pero con
-                        paciencia y amor logramos que confiara en nosotros. Ahora está feliz y tiene una familia que lo
-                        quiere.</p>
+                    <img src="img/poppy.jpg" alt="Poppy">
+                    <h3>Poppy</h3>
+                    <p>Durante una excursión en grupo, nos topamos con un perro herido y exhausto en la montaña. Sin dudarlo, nos unimos para cuidarlo y llevarlo
+                         en brazos hasta el pueblo más cercano. Trabajando juntos, lo trasladamos a recibir atención médica donde descubrimos un chip de identificación. 
+                         ¡Fue un éxito! Logramos contactar a su familia y facilitamos un emotivo reencuentro. Fue un logro grupal que nos llenó de alegría.</p>
                 </div>
 
 
             </div>
         </section>
     </main>
-    <!-- Crear un pie de página para el sitio web -->
     <footer>
         <div class="arriba">
             <div class="derecha">
@@ -112,11 +102,11 @@
                     Siguenos
                 </h2>
                 <ul>
-                    <li> <a href="https://www.instagram.com/?hl=es"><img src="img/Instagram-logo.png" width="50" alt="">
+                    <li> <a href="https://www.instagram.com/?hl=es"><img src="Img/Instagram-logo.png" width="50" alt="">
                         </a></li>
                     <li> <a href="https://www.facebook.com/"><img src="img//8efb55e9efc12eb11bedf41caa7f33bb.png"
                                 width="50" alt=""></a></li>
-                    <li> <a href="https://www.youtube.com/"> <img src="img/YouTube_full-color_icon_(2017).svg.png"
+                    <li> <a href="https://www.youtube.com/"> <img src="Img/YouTube_full-color_icon_(2017).svg.png"
                                 width="50" alt=""> </a></li>
                 </ul>
             </div>
